initial layout complete now working on functionality

--- a/index.html
+++ b/index.html
@@ -29,10 +29,125 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div id="date1" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date2" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date3" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date4" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date5" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date6" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date7 class="calender-box"">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date8" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date9" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date10" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date11" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date12" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date13" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date14" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date15" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date16" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date17" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date18" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date19" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date20" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date21" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date23" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
+      <div id="date24" class="calender-box">
+        <span id="date">Date</span>
+        <textarea>Text goes here</textarea>
+        <span id="save" onclick="handleSave()">Save</span>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
